--- a/index.html
+++ b/index.html
@@ -36,6 +36,40 @@
 </footer>
 
 <body>
+
+<!-- Buttons In Body With Flex Wrap -->
+<div class="flex-container wrap">
+    <div class="action">
+        <a href="action.html">Action Movies</a>
+    </div>
+    <div class="animated">
+        <a href="animated.html">Animated Movies</a>
+    </div>
+    <div class="comedy">
+        <a href="comedy.html">Comedy Movies</a>
+    </div>
+    <div class="Docu">
+        <a href="documentary.html">Documentary Movies</a>
+    </div>
+    <div class="fantasy">
+        <a href="fantasy.html">Fantasy Movies</a>
+    </div>
+    <div class="horror">
+        <a href="horror.html">Horror Movies</a>
+    </div>
+    <div class="noir">
+        <a href="noir.html">NOIR Movies</a>
+    </div>
+    <div class="scifi">
+        <a href="scifi.html">Sci-Fi Movies</a>
+    </div>
+    <div class="thriller">
+        <a href="thriller.html">Thriller Movies</a>
+    </div>
+    <div class="truecrime">
+        <a href="truecrime.html">True Crime Movies</a>
+    </div>
+</div>
     
 </body>
 
