--- a/index.html
+++ b/index.html
@@ -37,39 +37,52 @@
 
 <body>
 
+    <div class="flex-parent around">
+        <div class="hero-image1">
+            <div class="hero-text1">
+                <a href="bestsellers.html"><button>Our Best Sellers</button></a>
+            </div>
+        </div>
+        <div class="hero-image2">
+            <div class="hero-text2">
+                <a href="newarrivals.html"><button>Our New Arrivals</button></a>
+            </div>
+        </div>
+    </div>
+
 <!-- Buttons In Body With Flex Wrap -->
-<div class="flex-container wrap">
-    <div class="action">
-        <a href="action.html">Action Movies</a>
+    <div class="flex-container wrap">
+        <div class="action">
+            <a href="action.html">Action Movies</a>
+        </div>
+        <div class="animated">
+            <a href="animated.html">Animated Movies</a>
+        </div>
+        <div class="comedy">
+            <a href="comedy.html">Comedy Movies</a>
+        </div>
+        <div class="Docu">
+            <a href="documentary.html">Documentary Movies</a>
+        </div>
+        <div class="fantasy">
+            <a href="fantasy.html">Fantasy Movies</a>
+        </div>
+        <div class="horror">
+            <a href="horror.html">Horror Movies</a>
+        </div>
+        <div class="noir">
+            <a href="noir.html">NOIR Movies</a>
+        </div>
+        <div class="scifi">
+            <a href="scifi.html">Sci-Fi Movies</a>
+        </div>
+        <div class="thriller">
+            <a href="thriller.html">Thriller Movies</a>
+        </div>
+        <div class="truecrime">
+            <a href="truecrime.html">True Crime Movies</a>
+        </div>
     </div>
-    <div class="animated">
-        <a href="animated.html">Animated Movies</a>
-    </div>
-    <div class="comedy">
-        <a href="comedy.html">Comedy Movies</a>
-    </div>
-    <div class="Docu">
-        <a href="documentary.html">Documentary Movies</a>
-    </div>
-    <div class="fantasy">
-        <a href="fantasy.html">Fantasy Movies</a>
-    </div>
-    <div class="horror">
-        <a href="horror.html">Horror Movies</a>
-    </div>
-    <div class="noir">
-        <a href="noir.html">NOIR Movies</a>
-    </div>
-    <div class="scifi">
-        <a href="scifi.html">Sci-Fi Movies</a>
-    </div>
-    <div class="thriller">
-        <a href="thriller.html">Thriller Movies</a>
-    </div>
-    <div class="truecrime">
-        <a href="truecrime.html">True Crime Movies</a>
-    </div>
-</div>
     
 </body>
 
