--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
     <div class="flex-parent around">
         <div class="hero-image1">
             <div class="hero-text1">
+                <h1>Check Out Our Best Sellers In 2023</h1>
                 <a href="bestsellers.html"><button>Our Best Sellers</button></a>
             </div>
         </div>
         <div class="hero-image2">
             <div class="hero-text2">
+                <h1>Checl Out Our New Arrivals As Of November 2023</h1>
                 <a href="newarrivals.html"><button>Our New Arrivals</button></a>
             </div>
         </div>
