--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </footer>
 
 <body>
-
+<!--Hero Images Code-->
     <div class="flex-parent around">
         <div class="hero-image1">
             <div class="hero-text1">
