--- a/action.html
+++ b/action.html
@@ -31,9 +31,10 @@
 </header>
 
 <body>
+    <!--Visible Page Title-->
     <h1>Action Movies</h1>
 
-    <!--Content-->
+    <!--Movies Images + Descritpions + Buttons-->
     <div class="flex-content wrap">
         <div class="Northman">
           <img src="https://m.media-amazon.com/images/M/MV5BMzVlMmY2NTctODgwOC00NDMzLWEzMWYtM2RiYmIyNTNhMTI0XkEyXkFqcGdeQXVyNTAzNzgwNTg@._V1_.jpg">
