--- a/animated.html
+++ b/animated.html
@@ -31,10 +31,10 @@
 </header>
 
 <body>
-
+    <!--Visible Page Title-->
     <h3>Animated Movies</h3>
 
-    <!--Content-->
+    <!--Movies Images + Descritpions + Buttons-->
     <div class="flex-content wrap">
         <div class="inside">
             <img src="https://m.media-amazon.com/images/M/MV5BOTgxMDQwMDk0OF5BMl5BanBnXkFtZTgwNjU5OTg2NDE@._V1_.jpg">
