--- a/bestsellers.html
+++ b/bestsellers.html
@@ -31,8 +31,10 @@
 </header>
 
 <body>
+    <!--Visible Page Title-->
     <h1>Our Best Sellers As In 2023</h1>
 
+    <!--Movies Images + Descritpions + Buttons-->
     <div class="flex-content wrap">
         <div class="dailywire">
             <img src="https://m.media-amazon.com/images/M/MV5BY2JiMWExOTItNWIzYy00NmQ1LThkNGEtMTk5MmM1YmE5NGVmXkEyXkFqcGdeQXVyMTUzMjQxODI1._V1_.jpg">
