--- a/action.html
+++ b/action.html
@@ -8,6 +8,7 @@
     <title>Action Movies</title>
 </head>
 
+<body>
 <!-- Header Code-->
 <header>
     <div class="header">
@@ -30,7 +31,6 @@
     </div>
 </header>
 
-<body>
     <!--Visible Page Title-->
     <h1>Action Movies</h1>
 
@@ -86,9 +86,10 @@
         </div>
     </div>
 
-</body>
-
-<!--Footer Code-->
+    <!--Footer Code-->
 <footer>
     <div class="footer"></div>
 </footer>
+
+</body>
+</html>
