--- a/animated.html
+++ b/animated.html
@@ -8,6 +8,7 @@
     <title>Animated Movies</title>
 </head>
 
+<body>
 <!-- Header Code-->
 <header>
     <div class="header">
@@ -30,7 +31,6 @@
     </div>
 </header>
 
-<body>
     <!--Visible Page Title-->
     <h3>Animated Movies</h3>
 
@@ -85,9 +85,11 @@
             </div>
         </div>
     </div>
-</body>
 
 <!--Footer Code-->
 <footer>
     <div class="footer"></div>
 </footer>
+
+</body>
+</html>
