--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Home Page</title>
 </head>
 
+<body>
 <!-- Header Code-->
 <header>
     <div class="header">
@@ -30,24 +31,18 @@
     </div>
 </header>
 
-<!--Footer Code-->
-<footer>
-    <div class="footer"></div>
-</footer>
-
-<body>
 <!--Hero Images Code-->
     <div class="flex-parent around">
         <div class="hero-image1">
             <div class="hero-text1">
                 <h3>Check Out Our Best Sellers In 2023</h3>
-                <a href="bestsellers.html"><button>Our Best Sellers</button></a>
+                <a href="bestsellers.html">Our Best Sellers</a>
             </div>
         </div>
         <div class="hero-image2">
             <div class="hero-text2">
                 <h3>Checl Out Our New Arrivals As Of November 2023</h3>
-                <a href="newarrivals.html"><button>Our New Arrivals</button></a>
+                <a href="newarrivals.html">Our New Arrivals</a>
             </div>
         </div>
     </div>
@@ -86,6 +81,11 @@
         </div>
     </div>
     
+    <!--Footer Code-->
+<footer>
+    <div class="footer"></div>
+</footer>
+
 </body>
 
 
