--- a/comedy.html
+++ b/comedy.html
@@ -8,6 +8,7 @@
     <title>Comedy Movies</title>
 </head>
 
+<body>
 <!-- Header Code-->
 <header>
     <div class="header">
@@ -30,7 +31,7 @@
     </div>
 </header>
 
-<body>
+
     <!--Visible Page Title-->
     <h1>Comedy Movies</h1>
 
@@ -52,7 +53,7 @@
             <img src="https://m.media-amazon.com/images/M/MV5BMTE0N2EyMzgtMWJhZS00ZWNmLThjZmQtMjcxYTk1NTJiMGVkXkEyXkFqcGdeQXVyNjY1MTg4Mzc@._V1_.jpg">
             <div class="text">
                 <p>Hubie Halloween <br> Realeased: 2020 <br> Audience Score: 47% <br> Price: $15.99</p>
-            </a>
+            </div>
         </div>
         <div class="reynolds">
             <img src="https://m.media-amazon.com/images/M/MV5BOTY2NzFjODctOWUzMC00MGZhLTlhNjMtM2Y2ODBiNGY1ZWRiXkEyXkFqcGdeQXVyMDM2NDM2MQ@@._V1_.jpg">
@@ -86,9 +87,11 @@
         </div>
     </div>
 
-</body>
+
 
 <!--Footer Code-->
 <footer>
     <div class="footer"></div>
 </footer>
+</body>
+</html>
