--- a/documentary.html
+++ b/documentary.html
@@ -8,6 +8,7 @@
     <title>Documentary Movies</title>
 </head>
 
+<body>
 <!-- Header Code-->
 <header>
     <div class="header">
@@ -30,7 +31,6 @@
     </div>
 </header>
 
-<body>
     <!--Visible Page Title-->
     <h1>Documentary Movies</h1>
 
@@ -85,9 +85,12 @@
             </div>
         </div>
     </div>
-</body>
+
 
 <!--Footer Code-->
 <footer>
     <div class="footer"></div>
 </footer>
+
+</body>
+</html>
