--- a/newarrivals.html
+++ b/newarrivals.html
@@ -8,6 +8,7 @@
     <title>Our New Arrivals</title>
 </head>
 
+<body>
 <!-- Header Code-->
 <header>
     <div class="header">
@@ -30,7 +31,65 @@
     </div>
 </header>
 
+<!--Visible Page Title-->
+<h1>Our New Arrivals As Of November 2023</h1>
+
+<!--Movies Images + Descritpions + Buttons-->
+<div class="flex-content wrap">
+    <div class="arttheclown">
+        <img src="https://m.media-amazon.com/images/M/MV5BNzEzOTZjYjYtMTI3MS00NWE1LWIyZTktYTRlMTBlYjlkMjZiXkEyXkFqcGdeQXVyMTUzMTg2ODkz._V1_.jpg">
+        <div class="text">
+            <p>Terrifer 2 <br> Realeased: 2022 <br> Audience Score: 80% <br> Price: $19.99</p>
+        </div>
+    </div>
+    <div class="warrens">
+        <img src="https://images.moviesanywhere.com/a4d68b895ddea9e52e345e2f0c6838ab/423fc271-7a33-4155-92db-3c926d8c1af3.jpg">
+        <div class="text">
+            <p>The Conjuring 3 <br> Realeased: 2021 <br> Audience Score: 83% <br> Price: $14.99</p>
+        </div>
+    </div>
+    <div class="valak2">
+        <img src="https://m.media-amazon.com/images/M/MV5BNmE5MmM2ZGEtNTVlNC00M2Q3LTliMjMtMzg5YjUyMjliZWIzXkEyXkFqcGdeQXVyMTAxNzQ1NzI@._V1_FMjpg_UX1000_.jpg">
+        <div class="text">
+            <p>The Nun 2 <br> Realeased: 2023 <br> Audience Score: 57% <br> Price: $19.99</p>
+        </div>
+    </div>
+    <div class="allanpoe">
+        <img src="https://m.media-amazon.com/images/M/MV5BZDg2YThlMTItYzhhMy00OWE3LTljYTAtYTExMDM5NzRjOGFhXkEyXkFqcGdeQXVyMTEzMTI1Mjk3._V1_FMjpg_UX1000_.jpg">
+        <div class="text">
+            <p>The Pale Blue Eyes <br> Realeased: 2022 <br> Audience Score: 69% <br> Price: $17.99</p>
+        </div>
+    </div>
+    <div class="jake">
+        <img src="https://m.media-amazon.com/images/I/71Lvqoov42L.jpg">
+        <div class="text">
+            <p>Avatar 2 <br> Realeased: 2022 <br> Audience Score: 92% <br> Price: $19.99</p>
+        </div>
+    </div>
+    <div class="cillian">
+        <img src="https://m.media-amazon.com/images/I/71lqDylcvGL.jpg">
+        <div class="text">
+            <p>Oppenheimer <br> Realeased: 2023 <br> Audience Score: 91% <br> Price: $29.99</p>
+        </div>
+    </div>
+    <div class="evildead">
+        <img src="https://m.media-amazon.com/images/M/MV5BMmZiN2VmMjktZDE5OC00ZWRmLWFlMmEtYWViMTY4NjM3ZmNkXkEyXkFqcGdeQXVyMTI2MTc2ODM3._V1_FMjpg_UX1000_.jpg">
+        <div class="text">
+            <p>Evil Dead Rise <br> Realeased: 2023 <br> Audience Score: 76% <br> Price: $9.99</p>
+        </div>
+    </div>
+    <div class="wakanda">
+        <img src="https://m.media-amazon.com/images/M/MV5BNTM4NjIxNmEtYWE5NS00NDczLTkyNWQtYThhNmQyZGQzMjM0XkEyXkFqcGdeQXVyODk4OTc3MTY@._V1_.jpg">
+        <div class="text">
+            <p>Black Panther 2 <br> Realeased: 2022 <br> Audience Score: 94% <br> Price: $9.99</p>
+        </div>
+    </div>
+</div>
+
 <!--Footer Code-->
 <footer>
     <div class="footer"></div>
 </footer>
+
+</body>
+</html>
