--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,31 @@
     </div>
 </header>
 
+<h1>Fill Out The Form Below If You Have Any Questions <br> Or If You Encanter Any Problems</h1>
+
+<form action="succesfulcontact.html">
+    <ul>
+        <li>
+            <label for="name">Enter Your Name</label>
+            <input type="text" id="name" name="user_name"/>
+        </li>
+        <br>
+        <li>
+            <label for="mail">Enter Your E-mail</label>
+            <input type="email" id="mail" name="user_email"/>
+        </li>
+        <br>
+        <li>
+            <label for="message">Enter Your Message To Us</label>
+            <textarea id="message" name="user_message"></textarea>
+        </li>
+        <br>
+        <li class="button">
+            <button type="submit">Send Your Message</button>
+        </li>
+    </ul>
+</form>
+
 <!--Footer Code-->
 <footer>
     <div class="footer"></div>
