--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
         <div class="hero-image1">
             <div class="hero-text1">
                 <h3>Check Out Our Best Sellers In 2023</h3>
-                <a href="bestsellers.html">Our Best Sellers</a>
+                <a href="bestsellers.html" class="bodybuttons">Our Best Sellers</a>
             </div>
         </div>
         <div class="hero-image2">
             <div class="hero-text2">
                 <h3>Checl Out Our New Arrivals As Of November 2023</h3>
-                <a href="newarrivals.html">Our New Arrivals</a>
+                <a href="newarrivals.html" class="bodybuttons">Our New Arrivals</a>
             </div>
         </div>
     </div>
@@ -87,7 +87,4 @@
 </footer>
 
 </body>
-
-
-
 </html>
