--- a/contact.html
+++ b/contact.html
@@ -50,8 +50,8 @@
             <textarea id="message" name="user_message"></textarea>
         </li>
         <br>
-        <li class="button">
-            <button type="submit">Send Your Message</button>
+        <li class="bodybuttons">
+            <a href="succesfulcontact.html" type="submit">Send Your Message</a>
         </li>
     </ul>
 </form>
