--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 
 <h1>Fill Out The Form Below If You Have Any Questions <br> Or If You Encanter Any Problems</h1>
 
-<form action="succesfulcontact.html">
+<form class="form" action="succesfulcontact.html">
     <ul>
         <li>
             <label for="name">Enter Your Name</label>
