--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,8 @@
 </header>
 
 <h1>Fill Out The Form Below If You Have Any Questions <br> Or If You Encanter Any Problems</h1>
+<br>
+<h2>Our Customer Service Is Open 24 / 7</h2>
 
 <form class="form" action="succesfulcontact.html">
     <ul>
