--- a/contact.html
+++ b/contact.html
@@ -31,11 +31,13 @@
     </div>
 </header>
 
+<!--H1 + H2 Above The Form-->
 <h1>Fill Out The Form Below If You Have Any Questions <br> Or If You Encanter Any Problems</h1>
 <br>
 <h2>Our Customer Service Is Open 24 / 7</h2>
 
-<form class="form" action="succesfulcontact.html">
+<!--Contact Form-->
+<form action="succesfulcontact.html">
     <ul>
         <li>
             <label for="name">Enter Your Name</label>
