--- a/animated.html
+++ b/animated.html
@@ -37,49 +37,49 @@
     <!--Movies Images + Descritpions + Buttons-->
     <div class="flex-content wrap">
         <div class="inside">
-            <img src="https://m.media-amazon.com/images/M/MV5BOTgxMDQwMDk0OF5BMl5BanBnXkFtZTgwNjU5OTg2NDE@._V1_.jpg">
+            <img src="https://m.media-amazon.com/images/M/MV5BOTgxMDQwMDk0OF5BMl5BanBnXkFtZTgwNjU5OTg2NDE@._V1_.jpg" alt="Inside Out Movie Poster">
             <div class="text">
                 <p>Inside Out<br> Realeased: 2015 <br> Audience Score: 89% <br> Price: $15.99</p>
             </div>
         </div>
         <div class="Aloha">
-            <img src="https://m.media-amazon.com/images/M/MV5BMTJkOGM1MDUtZTkxOS00MmYxLTk2ZWYtMTQzZmMyOWI3ODgzXkEyXkFqcGdeQXVyNDQ5MDYzMTk@._V1_.jpg">
+            <img src="https://m.media-amazon.com/images/M/MV5BMTJkOGM1MDUtZTkxOS00MmYxLTk2ZWYtMTQzZmMyOWI3ODgzXkEyXkFqcGdeQXVyNDQ5MDYzMTk@._V1_.jpg" alt="Aloha Scooby Doo Movie Poster">
             <div class="text">
                 <p>Aloha Scooby Doo <br> Realeased: 2005 <br> Audience Score: 62% <br> Price: $9.99</p>
             </div>
         </div>
         <div class="monster">
-            <img src="https://lumiere-a.akamaihd.net/v1/images/p_monstersinc_19751_55afa07a.jpeg">
+            <img src="https://lumiere-a.akamaihd.net/v1/images/p_monstersinc_19751_55afa07a.jpeg" alt="Monster Inc Movie Poster">
             <div class="text">
                 <p>Monster Inc <br> Realeased: 2001 <br> Audience Score: 90% <br> Price: $9.99</p>
             </div>
         </div>
         <div class="coco">
-            <img src="https://m.media-amazon.com/images/M/MV5BYjQ5NjM0Y2YtNjZkNC00ZDhkLWJjMWItN2QyNzFkMDE3ZjAxXkEyXkFqcGdeQXVyODIxMzk5NjA@._V1_.jpg">
+            <img src="https://m.media-amazon.com/images/M/MV5BYjQ5NjM0Y2YtNjZkNC00ZDhkLWJjMWItN2QyNzFkMDE3ZjAxXkEyXkFqcGdeQXVyODIxMzk5NjA@._V1_.jpg" alt="Coco Movie Poster">
             <div class="text">
                 <p>Coco <br> Realeased: 2017 <br> Audience Score: 94% <br> Price: $12.99</p>
             </div>
         </div>
         <div class="encanto">
-            <img src="https://m.media-amazon.com/images/I/719lW69kGoL.jpg">
+            <img src="https://m.media-amazon.com/images/I/719lW69kGoL.jpg" alt="Encanto Movie Poster">
             <div class="text">
                 <p>Encanto <br> Realeased: 2021 <br> Audience Score: 93% <br> Price: $9.99</p>
             </div>
         </div>
         <div class="zootopia">
-            <img src="https://m.media-amazon.com/images/I/71yXjuRONOL.jpg">
+            <img src="https://m.media-amazon.com/images/I/71yXjuRONOL.jpg" alt="Zootopia Movie Poster">
             <div class="text">
                 <p>Zootopia <br> Realeased: 2016 <br> Audience Score: 92% <br> Price: $19.99</p>
             </div>
         </div>
         <div class="killingjoke">
-            <img src="https://m.media-amazon.com/images/I/81Yakb7GZuL.jpg">
+            <img src="https://m.media-amazon.com/images/I/81Yakb7GZuL.jpg" alt="Batman: The Killing Joke Movie Poster">
             <div class="text">
                 <p>The Killing Joke <br> Realeased: 2016 <br> Audience Score: 50% <br> Price: $6.99</p>
             </div>
         </div>
         <div class="redhood">
-            <img src="https://www.themoviedb.org/t/p/original/dEujs48u3n4cmh15ITtHHDFxSaS.jpg">
+            <img src="https://www.themoviedb.org/t/p/original/dEujs48u3n4cmh15ITtHHDFxSaS.jpg" alt="Batman: Under The Red Hood Movie Poster">
             <div class="text">
                 <p>Under The Red Hood <br> Realeased: 2010 <br> Audience Score: 92% <br> Price: $12.99</p>
             </div>
