--- a/documentary.html
+++ b/documentary.html
@@ -37,49 +37,49 @@
     <!--Movies Images + Descritpions + Buttons-->
     <div class="flex-content wrap">
         <div class="jim">
-            <img src="https://pics.filmaffinity.com/Jim_amp_Andy_The_Great_Beyond-295818079-large.jpg">
+            <img src="https://pics.filmaffinity.com/Jim_amp_Andy_The_Great_Beyond-295818079-large.jpg" alt="Jim & Andy Movie Poster">
             <div class="text">
                 <p>Jim & Andy <br> Realeased: 2017 <br> Audience Score: 74% <br> Price: $9.99</p>
             </div>
         </div>
         <div class="mcdonalds">
-            <img src="https://m.media-amazon.com/images/M/MV5BYjYwZjUwODgtMDRhYS00MDBlLTkzNjAtOTIzY2RiZDFjNWExXkEyXkFqcGdeQXVyODIyOTEyMzY@._V1_.jpg">
+            <img src="https://m.media-amazon.com/images/M/MV5BYjYwZjUwODgtMDRhYS00MDBlLTkzNjAtOTIzY2RiZDFjNWExXkEyXkFqcGdeQXVyODIyOTEyMzY@._V1_.jpg" alt="The Founder Movie Poster">
             <div class="text">
                 <p>The Founder <br>Realeased: 2016 <br> Audience Score: 82% <br> Price: $9.99</p>
             </div>
         </div>
         <div class="breivik">
-            <img src="https://m.media-amazon.com/images/M/MV5BNGY2MmQ0YTYtNjRjOS00ZjBhLThlMDMtN2FiY2ZjODhmNzU2XkEyXkFqcGdeQXVyOTA5NzQ0MDQ@._V1_.jpg">
+            <img src="https://m.media-amazon.com/images/M/MV5BNGY2MmQ0YTYtNjRjOS00ZjBhLThlMDMtN2FiY2ZjODhmNzU2XkEyXkFqcGdeQXVyOTA5NzQ0MDQ@._V1_.jpg" alt="22 July Movie Poster">
             <div class="text">
                 <p>22 July <br> Realeased: 2018 <br> Audience Score: 69% <br> Price: $11.99</p>
             </div>
         </div>
         <div class="gaga">
-            <img src="https://m.media-amazon.com/images/M/MV5BMTUzNzAxNTM0MV5BMl5BanBnXkFtZTgwODE1NzMzMzI@._V1_FMjpg_UX1000_.jpg">
+            <img src="https://m.media-amazon.com/images/M/MV5BMTUzNzAxNTM0MV5BMl5BanBnXkFtZTgwODE1NzMzMzI@._V1_FMjpg_UX1000_.jpg" alt="Gage Five Foot Two Movie Poster">
             <div class="text">
                 <p>Gaga 5 Foot 2 <br> Realeased: 2017 <br> Audience Score: 80% <br> Price: $10.99</p>
             </div>
         </div>
         <div class="ufo">
-            <img src="https://resizing.flixster.com/-XZAfHZM39UwaGJIFWKAE8fS0ak=/v3/t/assets/p16236412_p_v13_aa.jpg">
+            <img src="https://resizing.flixster.com/-XZAfHZM39UwaGJIFWKAE8fS0ak=/v3/t/assets/p16236412_p_v13_aa.jpg" alt="Bob Lazar Movie Poster">
             <div class="text">
                 <p>Bob Lazar <br> Realeased: 2018 <br> Audience Score: 44% <br> Price: $8.99</p>
             </div>
         </div>
         <div class="alcatraz">
-            <img src="https://www.themoviedb.org/t/p/w500/cwKRHKjKZz9dCsGhWrXf1wUrCKw.jpg">
+            <img src="https://www.themoviedb.org/t/p/w500/cwKRHKjKZz9dCsGhWrXf1wUrCKw.jpg" alt="Drain Alcatraz Movie Poster">
             <div class="text">
                 <p>Drain Alcatraz <br>Realeased: 2017 <br> Audience Score: 61% <br> Price: $5.99</p>
             </div>
         </div>
         <div class="titanic">
-            <img src="https://images.justwatch.com/poster/206192025/s718/drain-the-titanic.jpg">
+            <img src="https://images.justwatch.com/poster/206192025/s718/drain-the-titanic.jpg" alt="Drain Titanic Movie Poster">
             <div class="text">
                 <p>Drain Titanic <br> Realeased: 2016 <br> Audience Score: 64% <br> Price: $5.99</p>
             </div>
         </div>
         <div class="elonmusk">
-            <img src="https://m.media-amazon.com/images/M/MV5BNTBiZTFlMTItZTg2MS00MmNjLThkMjEtMDk5NGU4NmYxODEwXkEyXkFqcGdeQXVyNTM5MTg5NjA@._V1_.jpg">
+            <img src="https://m.media-amazon.com/images/M/MV5BNTBiZTFlMTItZTg2MS00MmNjLThkMjEtMDk5NGU4NmYxODEwXkEyXkFqcGdeQXVyNTM5MTg5NjA@._V1_.jpg" alt="Return To Space Movie Poster">
             <div class="text">
                 <p>Return To Space <br> Realeased: 2022 <br> Audience Score: 77% <br> Price: $9.99</p>
             </div>
