--- a/fantasy.html
+++ b/fantasy.html
@@ -37,37 +37,37 @@
 <!--Movies Images + Descritpions + Buttons-->
 <div class="flex-content wrap">
     <div class="johnny">
-        <img src="https://m.media-amazon.com/images/M/MV5BZWJlNTIzYjEtZGU1Ni00MmU0LTk5YzMtZTcxOTYwOGMxYzExXkEyXkFqcGdeQXVyMjg1NDcxNDE@._V1_.jpg">
+        <img src="https://m.media-amazon.com/images/M/MV5BZWJlNTIzYjEtZGU1Ni00MmU0LTk5YzMtZTcxOTYwOGMxYzExXkEyXkFqcGdeQXVyMjg1NDcxNDE@._V1_.jpg" alt="Dark Shadows Movie Poster">
         <div class="text">
             <p>Dark Shadows <br> Realeased: 2012 <br> Audience Score: 46% <br> Price: $12.99</p>
         </div>
     </div>
     <div class="watermonster">
-        <img src="https://m.media-amazon.com/images/M/MV5BNGNiNWQ5M2MtNGI0OC00MDA2LWI5NzEtMmZiYjVjMDEyOWYzXkEyXkFqcGdeQXVyMjM4NTM5NDY@._V1_.jpg">
+        <img src="https://m.media-amazon.com/images/M/MV5BNGNiNWQ5M2MtNGI0OC00MDA2LWI5NzEtMmZiYjVjMDEyOWYzXkEyXkFqcGdeQXVyMjM4NTM5NDY@._V1_.jpg" alt="The Shape Of Water Movie Poster">
         <div class="text">
             <p>The Shape Of Water <br> Realeased: 2017 <br> Audience Score: 72% <br> Price: $9.99</p>
         </div>
     </div>
     <div class="obiwan">
-        <img src="https://m.media-amazon.com/images/M/MV5BZTNlNTQzMGEtYjU4Yi00MzEzLThmMTQtNmM0NzcxZWI1MTk0XkEyXkFqcGdeQXVyMjUzOTY1NTc@._V1_.jpg">
+        <img src="https://m.media-amazon.com/images/M/MV5BZTNlNTQzMGEtYjU4Yi00MzEzLThmMTQtNmM0NzcxZWI1MTk0XkEyXkFqcGdeQXVyMjUzOTY1NTc@._V1_.jpg" alt="Big Fish Movie Poster">
         <div class="text">
             <p>Big Fish <br> Realeased: 2003 <br> Audience Score: 89% <br> Price: $12.99</p>
         </div>
     </div>
     <div class="labyrinth">
-        <img src="https://m.media-amazon.com/images/M/MV5BYzFjMThiMGItOWRlMC00MDI4LThmOGUtYTNlZGZiYWI1YjMyXkEyXkFqcGdeQXVyMjUzOTY1NTc@._V1_FMjpg_UX1000_.jpg">
+        <img src="https://m.media-amazon.com/images/M/MV5BYzFjMThiMGItOWRlMC00MDI4LThmOGUtYTNlZGZiYWI1YjMyXkEyXkFqcGdeQXVyMjUzOTY1NTc@._V1_FMjpg_UX1000_.jpg" alt="Pan's Labyrnith Movie Poster">
         <div class="text">
             <p>Pan's Labyrnith <br> Realeased: 2006 <br> Audience Score: 91% <br> Price: $9.99</p>
         </div>
     </div>
     <div class="navi">
-        <img src="https://m.media-amazon.com/images/M/MV5BZDA0OGQxNTItMDZkMC00N2UyLTg3MzMtYTJmNjg3Nzk5MzRiXkEyXkFqcGdeQXVyMjUzOTY1NTc@._V1_.jpg">
+        <img src="https://m.media-amazon.com/images/M/MV5BZDA0OGQxNTItMDZkMC00N2UyLTg3MzMtYTJmNjg3Nzk5MzRiXkEyXkFqcGdeQXVyMjUzOTY1NTc@._V1_.jpg" alt="Avatar Movie Poster">
         <div class="text">
             <p>Avatar <br> Realeased: 2009 <br> Audience Score: 82% <br> Price: $15.99</p>
         </div>
     </div>
     <div class="therock">
-        <img src="https://m.media-amazon.com/images/M/MV5BODQ0NDhjYWItYTMxZi00NTk2LWIzNDEtOWZiYWYxZjc2MTgxXkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_.jpg">
+        <img src="https://m.media-amazon.com/images/M/MV5BODQ0NDhjYWItYTMxZi00NTk2LWIzNDEtOWZiYWYxZjc2MTgxXkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_.jpg" alt="Jumanji Movie Poster">
         <div class="text">
             <p>Jumanji <br> Realeased: 2017 <br> Audience Score: 87% <br> Price: $14.99</p>
         </div>
