--- a/fantasy.html
+++ b/fantasy.html
@@ -73,13 +73,13 @@
         </div>
     </div>
     <div class="mummy">
-        <img src="https://img.fruugo.com/product/9/85/55511859_max.jpg">
+        <img src="https://img.fruugo.com/product/9/85/55511859_max.jpg" alt="The Mummy: Retunrs Movie Poster">
         <div class="text">
             <p>Mummy: Returns <br> Realeased: 2001 <br> Audience Score: 63% <br> Price: $14.99</p>
         </div>
     </div>
     <div class="hobbit">
-        <img src="https://www.themoviedb.org/t/p/original/yHA9Fc37VmpUA5UncTxxo3rTGVA.jpg">
+        <img src="https://www.themoviedb.org/t/p/original/yHA9Fc37VmpUA5UncTxxo3rTGVA.jpg" alt="The Hobbit Movie Poster">
         <div class="text">
             <p>The Hobbit <br> Realeased: 2012 <br> Audience Score: 83% <br> Price: $17.99</p>
         </div>
