--- a/scifi.html
+++ b/scifi.html
@@ -14,7 +14,7 @@
     <div class="header">
         <div class="header-left">
             <div class="logo-container">
-                <a href="index.html"><img src="./media/Logo.png"></a>
+                <a href="index.html"><img src="./media/Logo.png" alt="Square Eyes Logo"></a>
             </div>
          </div>
         <div class="header-right">
@@ -37,49 +37,49 @@
 <!--Movies Images + Descritpions + Buttons-->
 <div class="flex-content wrap">
     <div class="playerone">
-        <img src="https://m.media-amazon.com/images/M/MV5BY2JiYTNmZTctYTQ1OC00YjU4LWEwMjYtZjkwY2Y5MDI0OTU3XkEyXkFqcGdeQXVyNTI4MzE4MDU@._V1_.jpg">
+        <img src="https://m.media-amazon.com/images/M/MV5BY2JiYTNmZTctYTQ1OC00YjU4LWEwMjYtZjkwY2Y5MDI0OTU3XkEyXkFqcGdeQXVyNTI4MzE4MDU@._V1_.jpg" alt="Ready Player One Movie Poster">
         <div class="text">
             <p>Ready Player One <br> Realeased: 2018 <br> Audeince Score: 77% <br> Price: $14.99</p>
         </div>
     </div>
     <div class="mattdamon">
-        <img src="https://m.media-amazon.com/images/I/A1+Fw58qbDL._AC_UF894,1000_QL80_.jpg">
+        <img src="https://m.media-amazon.com/images/I/A1+Fw58qbDL._AC_UF894,1000_QL80_.jpg" alt="The Martian Movie Poster">
         <div class="text">
             <p>The Martian <br> Realeased: 2015 <br> Audience Score: 91% <br> Price: $14.99</p>
         </div>
     </div>
     <div class="hansolo">
-        <img src="https://m.media-amazon.com/images/I/71NPmBOdq7L._AC_UF894,1000_QL80_.jpg">
+        <img src="https://m.media-amazon.com/images/I/71NPmBOdq7L._AC_UF894,1000_QL80_.jpg" alt="Blade Runner 2049 Movie Poster">
         <div class="text">
             <p>Blade Runner 2049 <br> Realeased: 2017 <br> Audience Score: 87% <br> Price: $9.99</p>
         </div>
     </div>
     <div class="mcconaughey">
-        <img src="https://m.media-amazon.com/images/M/MV5BZjdkOTU3MDktN2IxOS00OGEyLWFmMjktY2FiMmZkNWIyODZiXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_.jpg">
+        <img src="https://m.media-amazon.com/images/M/MV5BZjdkOTU3MDktN2IxOS00OGEyLWFmMjktY2FiMmZkNWIyODZiXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_.jpg" alt="Interstellar Movie Poster">
         <div class="text">
             <p>Interstellar <br> Realeased: 2014 <br> Audeince Score: 86% <br> Price: $9.99</p>
         </div>
     </div>
     <div class="gyllenhaal">
-        <img src="https://m.media-amazon.com/images/M/MV5BMzAwMmQxNTctYjVmYi00MDdlLWEzMWUtOTE5NTRiNDhhNjI2L2ltYWdlXkEyXkFqcGdeQXVyMTkxNjUyNQ@@._V1_.jpg">
+        <img src="https://m.media-amazon.com/images/M/MV5BMzAwMmQxNTctYjVmYi00MDdlLWEzMWUtOTE5NTRiNDhhNjI2L2ltYWdlXkEyXkFqcGdeQXVyMTkxNjUyNQ@@._V1_.jpg" alt="Life Movie poster">
         <div class="text">
             <p>Life <br> Realeased: 2017 <br> Audience Score: 54% <br> Price: $12.99</p>
         </div>
     </div>
     <div class="dune">
-        <img src="https://m.media-amazon.com/images/I/61QbqeCVm0L.jpg">
+        <img src="https://m.media-amazon.com/images/I/61QbqeCVm0L.jpg" alt="Dune Movie Poster">
         <div class="text">
             <p>Dune <br> Realeased: 2021 <br> Audience Score: 90% <br> Price: $16.99</p>
         </div>
     </div>
     <div class="trex">
-        <img src="https://m.media-amazon.com/images/I/61fExTEY7dL.jpg">
+        <img src="https://m.media-amazon.com/images/I/61fExTEY7dL.jpg" alt="Jurrassic Park Movie Poster">
         <div class="text">
             <p>Jurrassic Park <br> Realeased: 1993 <br> Audeince Score: 91% <br> Price: $14.99</p>
         </div>
     </div>
     <div class="keanu">
-        <img src="https://m.media-amazon.com/images/M/MV5BNzQzOTk3OTAtNDQ0Zi00ZTVkLWI0MTEtMDllZjNkYzNjNTc4L2ltYWdlXkEyXkFqcGdeQXVyNjU0OTQ0OTY@._V1_.jpg">
+        <img src="https://m.media-amazon.com/images/M/MV5BNzQzOTk3OTAtNDQ0Zi00ZTVkLWI0MTEtMDllZjNkYzNjNTc4L2ltYWdlXkEyXkFqcGdeQXVyNjU0OTQ0OTY@._V1_.jpg" alt="The Matrix Movie Poster">
         <div class="text">
             <p>The Matrix <br> Realeased: 1999 <br> Audience Score: 85% <br> Price: $14.99</p>
         </div>
