--- a/comedy.html
+++ b/comedy.html
@@ -14,7 +14,7 @@
     <div class="header">
         <div class="header-left">
             <div class="logo-container">
-                <a href="index.html"><img src="./media/Logo.png"></a>
+                <a href="index.html"><img src="./media/Logo.png" alt="Square Eyes Logo"></a>
             </div>
          </div>
         <div class="header-right">
