--- a/action.html
+++ b/action.html
@@ -39,13 +39,19 @@
         <div class="Northman">
           <img src="https://m.media-amazon.com/images/M/MV5BMzVlMmY2NTctODgwOC00NDMzLWEzMWYtM2RiYmIyNTNhMTI0XkEyXkFqcGdeQXVyNTAzNzgwNTg@._V1_.jpg" alt="The Northman Movie Poster">
             <div class="text">
-                <p>The Northman <br> Realeased: 2022 <br> Audience Score: 64% <br> Price: $14.99</p>
+                <p><b>The Northman</b> <br> Realeased: 2022 <br> Audience Score: 64% <br> Price: $14.99</p>
+                <div class="bodybuttons">
+                    <p>Buy Now</p>
+                </div>
             </div>
         </div>
         <div class="punisher">
             <img src="https://assets.bigcartel.com/product_images/240712037/punisher+war+zone.jpg?auto=format&fit=max&w=1500" alt="Punisher: War Zone Movie Poster">
             <div class="text">
-                <p>Punisher: War Zone <br> Realeased: 2008 <br> Audience Score: 42% <br> Price: $9.99</p>
+                <p><b>Punisher: War Zone</b> <br> Realeased: 2008 <br> Audience Score: 42% <br> Price: $9.99</p>
+                <div class="bodybuttons">
+                    <p>Buy Now</p>
+                </div>
             </div>
         </div>
         <div class="worsebatman">
