--- a/bestsellers.html
+++ b/bestsellers.html
@@ -40,48 +40,72 @@
             <img src="https://m.media-amazon.com/images/M/MV5BY2JiMWExOTItNWIzYy00NmQ1LThkNGEtMTk5MmM1YmE5NGVmXkEyXkFqcGdeQXVyMTUzMjQxODI1._V1_.jpg" alt="What Is A Woman? Movie Poster">
             <div class="text">
                 <p>What Is A Woman?<br> Realeased: 2022 <br>Audience Score: 99% <br> Price: $19.99</p>
+                <div class="bodybuttons">
+                    <p>Buy Now</p>
+                </div>
             </div>
         </div>
         <div class="joker">
             <img src="https://m.media-amazon.com/images/I/71KPOvu-hOL.jpg" alt="Joker Movie Poster">
             <div class="text">
                 <p>Joker <br> Realeased: 2019 <br> Audience Score: 88% <br> Price: $7.99</p>
+                <div class="bodybuttons">
+                    <p>Buy Now</p>
+                </div>
             </div>
         </div>
         <div class="knvies">
             <img src="https://m.media-amazon.com/images/I/91MeoYwAP8L._AC_UF894,1000_QL80_.jpg" alt="Knives Out Movie Poster">
             <div class="text">
                 <p>Knives Out <br> Realeased: 2019 <br> Audience Score: 92% <br> Price: $7.99</p>
+                <div class="bodybuttons">
+                    <p>Buy Now</p>
+                </div>
             </div>
         </div>
         <div class="bale">
             <img src="https://m.media-amazon.com/images/I/81CLFQwU-WL.jpg" alt="The Dark Knight Movie Poster">
             <div class="text">
                 <p>The Dark Knight <br> Realeased: 2008 <br> Audience Score: 94$ <br> Price: $19.99</p>
+                <div class="bodybuttons">
+                    <p>Buy Now</p>
+                </div>
             </div>
         </div>
         <div class="depp">
             <img src="https://m.media-amazon.com/images/M/MV5BMTQ4Yjk5ODEtNGFkOS00OTY1LTgwYTYtOTFkNmU2NzBmNGM2XkEyXkFqcGdeQXVyNDQ2MTMzODA@._V1_.jpg" alt="Sleepy Hollow Movie Poster">
             <div class="text">
                 <p>Sleepy Hollow <br> Realeased: 1999 <br> Audience Score: 80% <br> Price: $14.99</p>
+                <div class="bodybuttons">
+                    <p>Buy Now</p>
+                </div>
             </div>
         </div>
         <div class="notime">
             <img src="https://www.movieposters.com/cdn/shop/products/no_time_to_die_ver2_xlg_500x.jpg?v=1579790602" alt="No Time To Die Movie Poster">
             <div class="text">
                 <p>No Time To Die <br> Realeased: 2021 <br> Audience Score: 88% <br> Price: $19.99</p>
+                <div class="bodybuttons">
+                    <p>Buy Now</p>
+                </div>
             </div>
         </div>
         <div class="dracula">
             <img src="https://davebrendon.files.wordpress.com/2015/02/dracula-untold-poster.jpg?w=640" alt="Dracula: Untold Movie Poster">
             <div class="text">
                 <p>Dracula: Untold <br> Realeased: 2014 <br> Audience Score: 58% <br> Price: $4.99</p>
+                <div class="bodybuttons">
+                    <p>Buy Now</p>
+                </div>
             </div>
         </div>
         <div class="kong">
             <img src="https://m.media-amazon.com/images/M/MV5BMjYxYmRlZWYtMzAwNC00MDA1LWJjNTItOTBjMzlhNGMzYzk3XkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_.jpg" alt="King Kong Movie Poster">
             <div class="text">
                 <p>King Kong <br> Realeased: 2005 <br> Audience Score: 50% <br> Price: $5.99</p>
+                <div class="bodybuttons">
+                    <p>Buy Now</p>
+                </div>
             </div>
         </div>
     </div>
