--- a/noir.html
+++ b/noir.html
@@ -39,7 +39,7 @@
     <div class="nightcrawler">
         <img src="https://i.ebayimg.com/images/g/AKUAAOSwwI9ebQhW/s-l1600.jpg" alt="Nightcrawler Movie Poster">
         <div class="text">
-            <p>Nightcrawler <br> Realeased: 2014 <br> Audience Score: 86% <br> Price: $14.99</p>
+            <p><b>Nightcrawler</b><br> Realeased: 2014 <br> Audience Score: 86% <br> Price: $14.99</p>
             <div class="bodybuttons">
                 <p>Buy Now</p>
             </div>
@@ -48,7 +48,7 @@
     <div class="skårsgard">
         <img src="https://m.media-amazon.com/images/M/MV5BMjAwNTE3MjQ2M15BMl5BanBnXkFtZTgwNjgzNjk2NDM@._V1_.jpg" alt="Mute Movie Poster">
         <div class="text">
-            <p>Mute <br> Realeased: 2017 <br> Audience Score: 46% <br> Price: $9.99</p>
+            <p><b>Mute</b><br> Realeased: 2017 <br> Audience Score: 46% <br> Price: $9.99</p>
             <div class="bodybuttons">
                 <p>Buy Now</p>
             </div>
@@ -57,7 +57,7 @@
     <div class="spacey">
         <img src="https://www.originalfilmart.com/cdn/shop/products/usual_suspects_1995_original_film_art_ef9998dc-62be-47c0-92c5-d58632b646a4_1200x.jpg?v=1582620183" alt="The Usual Suspects Movie Poster">
         <div class="text">
-            <p>The Usual Suspects <br> Realeased: 1995 <br> Audience Score: 96% <br> Price: $7.99</p>
+            <p><b>The Usual Suspects</b><br> Realeased: 1995 <br> Audience Score: 96% <br> Price: $7.99</p>
             <div class="bodybuttons">
                 <p>Buy Now</p>
             </div>
@@ -66,7 +66,7 @@
     <div class="kidman">
         <img src="https://m.media-amazon.com/images/M/MV5BMDQ2YzEyZGItYWRhOS00MjBmLTkzMDUtMTdjYzkyMmQxZTJlXkEyXkFqcGdeQXVyNjU0OTQ0OTY@._V1_.jpg" alt="L.A Confidential Movie Poster">
         <div class="text">
-            <p>L.A Confidential <br> Realeased: 1996 <br> Audience Score: 94% <br> Price: $4.99</p>
+            <p><b>L.A Confidential</b><br> Realeased: 1996 <br> Audience Score: 94% <br> Price: $4.99</p>
             <div class="bodybuttons">
                 <p>Buy Now</p>
             </div>
@@ -75,7 +75,7 @@
     <div class="maxpayne">
         <img src="https://i.etsystatic.com/41088122/r/il/49bc9d/4768215649/il_570xN.4768215649_nc7m.jpg" alt="Max Payne Movie Poster">
         <div class="text">
-            <p>Max Payne <br> Realeased: 2008 <br> Audience Score: 29% <br> Price: $14.99</p>
+            <p><b>Max Payne</b> <br> Realeased: 2008 <br> Audience Score: 29% <br> Price: $14.99</p>
             <div class="bodybuttons">
                 <p>Buy Now</p>
             </div>
@@ -84,7 +84,7 @@
     <div class="disturbia">
         <img src="https://m.media-amazon.com/images/I/41hr93nbaAL._AC_UF894,1000_QL80_.jpg" alt="Disturbia Movie Poster">
         <div class="text">
-            <p>Diaturbia <br> Realeased: 2007 <br> Audience Score: 77% <br> Price: $5.99</p>
+            <p><b>Diaturbia</b><br> Realeased: 2007 <br> Audience Score: 77% <br> Price: $5.99</p>
             <div class="bodybuttons">
                 <p>Buy Now</p>
             </div>
@@ -93,7 +93,7 @@
     <div class="liamneseon">
         <img src="https://www.themoviedb.org/t/p/original/vjAMj81oYBryzGBhJk4gcK0M636.jpg" alt="Marlowe Movie Poster">
         <div class="text">
-            <p>Marlowe <br> Realeased: 2022 <br> Audience Score: 37% <br> Price: $19.99</p>
+            <p><b>Marlowe</b><br> Realeased: 2022 <br> Audience Score: 37% <br> Price: $19.99</p>
             <div class="bodybuttons">
                 <p>Buy Now</p>
             </div>
@@ -102,7 +102,7 @@
     <div class="tarantino">
         <img src="https://cdn.europosters.eu/image/750/posters/pulp-fiction-cover-i1288.jpg" alt="Pulp Fiction Movie Poster">
         <div class="text">
-            <p>Pulp Fiction <br> Realeased: 1994 <br> Audience Score: 96% <br> Price: $16.99</p>
+            <p><b>Pulp Fiction</b><br> Realeased: 1994 <br> Audience Score: 96% <br> Price: $16.99</p>
             <div class="bodybuttons">
                 <p>Buy Now</p>
             </div>
