--- a/comedy.html
+++ b/comedy.html
@@ -40,7 +40,7 @@
         <div class="keaton">
             <img src="https://m.media-amazon.com/images/M/MV5BZDdmNjBlYTctNWU0MC00ODQxLWEzNDQtZGY1NmRhYjNmNDczXkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_.jpg" alt="BeetleJucie Movie Poster">
             <div class="text">
-                <p>BeetleJuice <br> Realeased: 1988 <br> Audience Score: 82% <br> Price: $9.99</p>
+                <p><b>BeetleJuice</b><br> Realeased: 1988 <br> Audience Score: 82% <br> Price: $9.99</p>
                 <div class="bodybuttons">
                     <p>Buy Now</p>
                 </div>
@@ -49,7 +49,7 @@
         <div class="vampire">
             <img src="https://m.media-amazon.com/images/M/MV5BYWRkY2E3NDQtZmNlNy00ZjQwLThkMzMtYzQxOTU3YjVlYjYzXkEyXkFqcGdeQXVyMTU5OTA4NTIz._V1_.jpg" alt="Reinfield Movie Poster">
             <div class="text">
-                <p>ReinField <br> Realeased: 2023 <br> Audience Score: 79% <br> Price: $19.99</p>
+                <p><b>ReinField</b><br> Realeased: 2023 <br> Audience Score: 79% <br> Price: $19.99</p>
                 <div class="bodybuttons">
                     <p>Buy Now</p>
                 </div>
@@ -58,7 +58,7 @@
         <div class="sandler">
             <img src="https://m.media-amazon.com/images/M/MV5BMTE0N2EyMzgtMWJhZS00ZWNmLThjZmQtMjcxYTk1NTJiMGVkXkEyXkFqcGdeQXVyNjY1MTg4Mzc@._V1_.jpg" alt="Hubie Halloween Movie Poster">
             <div class="text">
-                <p>Hubie Halloween <br> Realeased: 2020 <br> Audience Score: 47% <br> Price: $15.99</p>
+                <p><b>Hubie Halloween</b><br> Realeased: 2020 <br> Audience Score: 47% <br> Price: $15.99</p>
                 <div class="bodybuttons">
                     <p>Buy Now</p>
                 </div>
@@ -67,7 +67,7 @@
         <div class="reynolds">
             <img src="https://m.media-amazon.com/images/M/MV5BOTY2NzFjODctOWUzMC00MGZhLTlhNjMtM2Y2ODBiNGY1ZWRiXkEyXkFqcGdeQXVyMDM2NDM2MQ@@._V1_.jpg" alt="Free Guy Movie Poster">
             <div class="text">
-                <p>Free Guy <br> Realeased: 2021 <br> Audience Score: 94% <br> Price: $19.99</p>
+                <p><b>Free Guy</b><br> Realeased: 2021 <br> Audience Score: 94% <br> Price: $19.99</p>
                 <div class="bodybuttons">
                     <p>Buy Now</p>
                 </div>
@@ -76,7 +76,7 @@
         <div class="scarymovie">
             <img src="https://m.media-amazon.com/images/M/MV5BMGEzZjdjMGQtZmYzZC00N2I4LThiY2QtNWY5ZmQ3M2ExZmM4XkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_.jpg" alt="Scary Movie Movie Poster">
             <div class="text">
-                <p>Scary Movie <br> Realeased: 2000 <br> Audience Score: 43% <br> Price: $14.99</p>
+                <p><b>Scary Movie</b><br> Realeased: 2000 <br> Audience Score: 43% <br> Price: $14.99</p>
                 <div class="bodybuttons">
                     <p>Buy Now</p>
                 </div>
@@ -85,7 +85,7 @@
         <div class="borat">
             <img src="https://filmwonk.files.wordpress.com/2021/01/borat-subsequent-moviefilm.jpg" alt="Borat Subsquent Movie Poster">
             <div class="text">
-                <p>Borat <br> Realeased: 2020 <br> Audience Score: 62% <br> Price: $7.99</p>
+                <p><b>Borat</b><br> Realeased: 2020 <br> Audience Score: 62% <br> Price: $7.99</p>
                 <div class="bodybuttons">
                     <p>Buy Now</p>
                 </div>
@@ -94,7 +94,7 @@
         <div class="addams">
             <img src="https://m.media-amazon.com/images/M/MV5BMzYxZTUzODYtYjQwYi00NGYzLTkxZjEtNjYwZWZlYmM0ZDg3XkEyXkFqcGdeQXVyMTYzMDM0NTU@._V1_.jpg" alt="The Addams Family Movie Poster">
             <div class="text">
-                <p>The Addams Family <br> Realeased: 1991 <br> Audience Score: 66% <br> Price: $14.99</p>
+                <p><b>The Addams Family</b><br> Realeased: 1991 <br> Audience Score: 66% <br> Price: $14.99</p>
                 <div class="bodybuttons">
                     <p>Buy Now</p>
                 </div>
@@ -103,7 +103,7 @@
         <div class="culkin">
             <img src="https://media.licdn.com/dms/image/C5612AQE4hi2coNSeUA/article-inline_image-shrink_1500_2232/0/1603084325804?e=1703116800&v=beta&t=CZIXTzEebk5Azzk44M7NoIYqdqVu-yjJmbeMxv0J3QI" alt="Home Alone Movie Poster">
             <div class="text">
-                <p>Home Alone <br> Realeased: 1990 <br> Audience Score: 80% <br> Price: $14.99</p>
+                <p><b>Home Alone</b><br> Realeased: 1990 <br> Audience Score: 80% <br> Price: $14.99</p>
                 <div class="bodybuttons">
                     <p>Buy Now</p>
                 </div>
